# ALICBCT_SlicerModule

ALI_CBCT/: CMakeLists.txt
ALI_CBCT/ALI/: ALI.py
